# claude-code-proxy

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LOG_CLEANUP_README.md  QUICKSTART.md  README.md  START_PROXIES.md  docker-compose.yml  pyproject.toml  requirements.txt  setup-log-cleanup-cron.sh  start-all-proxies.sh  start_proxy.py  test_cancellation.py
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
src/: __init__.py  main.py
src/api/: endpoints.py
src/conversion/: request_converter.py  response_converter.py
src/core/: client.py  config.py  constants.py  logging.py  model_manager.py
src/models/: claude.py  openai.py
tests/: inspect-openai-headers.py  test-python-headers.py  test-with-claude-cli.sh  test_main.py
